[project]
name = "rl-dda-demo-back"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "dlwlgusdev", email = "dlwlgusdev@gmail.com" }
]
dependencies = [
    "fastapi==0.114.2",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "sqlalchemy==2.0.35",
    "sqlalchemy-utils==0.41.2",
    "alembic==1.13.2",
    "python-multipart==0.0.12",
    "aiomysql==0.2.0",
    "pymysql>=1.1.0",
    "mysql-connector-python>=9.0.0",
    "boto3==1.35.27",
    "cryptography>=41.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
dev = { cmd = "uvicorn src.main:app --reload" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
